@@ -1,6 +1,6 @@
 Package: oce
 Version: 0.8-10
-Date: 2012-05-26
+Date: 2012-05-27
 Title: Analysis of Oceanographic data
 Author: Dan Kelley <Dan.Kelley@Dal.Ca>
 Maintainer: Dan Kelley <Dan.Kelley@Dal.Ca>
