@@ -65,6 +65,7 @@ export("+.section",
        "heading<-",
        julianDay,
        julianCenturyAnomaly,
+       plotTaylor,
        processingLog,
        "processingLog<-",
        processingLogShow,
