@@ -27,6 +27,54 @@ filterSomething <- function(x, filter)
     res
 }
 
+plotTaylor <- function(x, y, scale, pch, col)
+{
+    if (missing(x)) stop("must supply 'x'")
+    if (missing(y)) stop("must supply 'y'")
+    ncol <- ncol(y)
+    if (missing(pch))
+        pch <- 1:ncol
+    if (missing(col))
+        col <- 1:ncol
+    xSD <- sd(x, na.rm=TRUE)
+    ySD <- sd(as.vector(y), na.rm=TRUE)
+    if (missing(y)) stop("must supply 'y'")
+    halfArc <- seq(0, pi, length.out=200)
+    if (missing(scale))
+        scale <- max(1.04 * pretty(c(xSD, ySD)))
+    plot.new()
+    plot.window(c(-1.04, 1.04) * scale, c(0, 1.04) * scale, asp=1)
+    sdPretty <- pretty(c(0, scale))
+    for (radius in sdPretty)
+        lines(radius * cos(halfArc), radius * sin(halfArc))
+    ## spokes
+    for (rr in seq(-1, 1, 0.1))
+        lines(c(0, max(sdPretty)*cos(pi/2 + rr * pi / 2)), c(0, max(sdPretty)*sin(pi/2 + rr * pi / 2)), col='gray')
+    for (rr in seq(-1, 1, 0.2))
+        lines(c(0, max(sdPretty)*cos(pi/2 + rr * pi / 2)), c(0, max(sdPretty)*sin(pi/2 + rr * pi / 2)))
+    axis(1, pos=0, at=c(-sdPretty, sdPretty))
+    ## temporarily permit labels outside the platting zone
+    xpdOld <- par('xpd')
+    par(xpd=NA)
+    text(max(sdPretty), 0, "R=1", pos=4)
+    text(0, max(sdPretty), "R=0", pos=3)
+    text(-max(sdPretty), 0, "R=-1", pos=2)
+    par(xpd=xpdOld)
+    points(xSD, 0, pch=20, cex=1.5)
+    for (column in 1:ncol(y)) {
+        ySD <- sd(y[,column], na.rm=TRUE)
+        R2 <- cor(x, y[,column])^2
+        ##cat("ySD=", ySD, "R2=", R2, "col=", col[column], "pch=", pch[column], "\n")
+        ## FIXME: the angle is wrong
+        points(ySD * cos((1 - R2) * pi / 2),
+               ySD * sin((1 - R2) * pi / 2), pch=pch[column],
+               lwd=2,
+               col=col[column], cex=2)
+        ##cat("x=", ySD * cos(pi/2+R2 * pi / 180/2), "\n")
+        ##cat("y=", ySD * sin(pi/2+R2 * pi / 180/2), "\n")
+    }
+}
+
 prettyPosition <- function(x)
 {
     debug <- FALSE
